{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Touch",
            "id": "c2cec74b-c481-41e0-b08d-6566d1b7cb31",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "18a51164-e705-4d00-8778-894962138075",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "f698493d-c5de-46ce-a43c-e5f695891e48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b12bd7b5-86e2-408e-9234-1fe9593e5678",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c60fbf6a-3429-4f53-a89a-30ce92686b04",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}